# spacious

./: .Rbuildignore  DESCRIPTION  NAMESPACE  README  TODO  cleanup  comp.sh  configure  configure.ac  do_inst.sh
R/: blocks.cluster.R  compute_cov.R  initial.theta.R  plot.spacious.R  predict.spacious.R  print.spacious.R  spacious.R  spacious.fit.R  summary.spacious.R
R/proto/: gev.R  poisson.R  spacious.R
data/: anom.2011.RData  mean_max_temps.RData
demo/: 00Index  geoR.R
inst/tests/: test-initial.theta.R
man/: anom.2011.Rd  mean_max_temps.Rd  plot.spacious.Rd  predict.spacious.Rd  spacious-package.Rd  spacious.Rd  spacious.fit.Rd  summary.spacious.Rd
manual/: doublespace.sty  fullpage.sty  spacious_manual.bib  spacious_manual.tex
orig_src/: Block.h  Makefile  MersenneTwister.h  kernels.cu  util.cu
src/: Block.cu  BlockComp.cpp  BlockComp.h  Makefile  Makefile.in  Makevars  Makevars.win  README  blockComp.cu  cholesky_kernel.cu  covs.cpp  covs.h  spacious.cpp  spacious_fit.cpp  test_data.h  util.h  utils.c  utils.cpp  utils.h  utils_cuda.cpp  utils_cuda.h  utils_cuda_kernels.cu  utils_magma.cpp  utils_magma.h
test/: brian.R  cluster.r  compute_timings.R  fisher.R  fisher_exp.R  fit_data.R  generate_data.R  manual.R  plot_timing.R  spacious_data.R  spacious_exp.R  spacious_local_preds.R  spacious_matern.R  spacious_preds.R  test_data.RData  times_1k_to_1m.csv  timing.R
test/jo/: jo_test.R  synt_data.txt  synt_data_pos1.txt  synt_data_pos2.txt
test/timings/: .plot.R.swp  b100.csv  b25.csv  full_cpu.csv  full_gpu.csv  plot.R
tests/: data.R  matern.R
unit_tests/: custom.R  exp.R  matern.R  test-all.R
